hphp/test/zend/good/ext-gd/imageinterlace_variation1.php
<?php

$image = imagecreatetruecolor(100, 100);

var_dump(imageinterlace($image, 1));
var_dump(imageinterlace($image));
?>