hphp/test/zend/bad/ext/fileinfo/tests/bug61173.php
<?php

$finfo = new finfo(1, '', false);
var_dump($finfo);